--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@ layout: default
 ---
 
 <div class="parallax">
-  <div class="col-lg-12 text-box text-center align-middle">
+  <div class="col-lg-8 mx-auto text-box text-center align-middle">
     <h1 class="mb-3">Všeobecná ambulancia pre dospelých</h1>
-
+    <p class="mb-3">
+      Lekár na dovolenke 24.8. do 4.9.2020. Sestra bude prítomná na ambulancii.
+      Môžete ju kontaktovať aj telefonicky alebo emailom. Zastupuje lekárka Dr.
+      Kubíková na rovnakej adrese (vedľa našej ambulancie).
+    </p>
     <a
       href="docs/dohoda_o_poskytovaní_zdravotnej_starostlivosti.pdf"
       target="_blank"
