--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@ layout: default
 
 <div class="parallax">
   <div class="col-lg-8 mx-auto text-box text-center align-middle">
-    <h1 class="mb-3">Všeobecná ambulancia pre dospelých</h1>
-    <a
-      href="docs/dohoda_o_poskytovaní_zdravotnej_starostlivosti.pdf"
-      target="_blank"
-      class="btn btn-primary mt-4"
-      style="background-color: {{ site.primary_color }};"
-      >Dohoda o poskytovaní zdravotnej starostlivosti</a
-    >
+    {% capture my_include %}{% include_relative content.md %}{% endcapture %}
+    {{ my_include | markdownify }}
+    <a href="docs/dohoda_o_poskytovaní_zdravotnej_starostlivosti.pdf" target="_blank" class="btn btn-primary mt-1"
+      style="background-color: {{ site.primary_color }};">Dohoda o poskytovaní zdravotnej starostlivosti</a>
   </div>
 </div>
 
@@ -91,13 +87,7 @@ layout: default
       <div class="col-lg-4 mr-auto">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2632.1659840433854!2d21.2360653156695!3d48.721419979274245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc819164716c78efd!2sV%C5%A1eobecn%C3%A1%20ambulancia%20pre%20dospel%C3%BDch%20MUDr.%20Val%C3%A9ria%20Kur%C3%A1kov%C3%A1%20(VALS%20s.r.o.)!5e0!3m2!1sen!2scz!4v1588693342599!5m2!1sen!2scz"
-          height="300"
-          frameborder="0"
-          style="border: 0;"
-          allowfullscreen=""
-          aria-hidden="false"
-          tabindex="0"
-        ></iframe>
+          height="300" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
     </div>
   </div>
